--- a/menu.css
+++ b/menu.css
@@ -49,6 +49,41 @@ nav > ul a:hover {
   display: none;
 }
 
+.centerImage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.centerImage img {
+  max-width: 100%;
+  height: auto;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  background-color: #dfdfdf;
+  color: #000000;
+  margin: 20px 0 20px 0;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+  padding: 2px 16px;
+}
+
+.centerCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 @media screen and (min-width: 700px) {
   nav {
     position: static;
