--- a/menu.css
+++ b/menu.css
@@ -63,7 +63,7 @@ nav > ul a:hover {
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  width: 40%;
+  width: 80%;
   background-color: #dfdfdf;
   color: #000000;
   margin: 20px 0 20px 0;
@@ -103,4 +103,9 @@ nav > ul a:hover {
   .twitter-icon {
     display: inline;
   }
+
+  .card {
+    width: 40%;
+  }
+
 }
